--- a/phaser3-tutorial-src/Main.html
+++ b/phaser3-tutorial-src/Main.html
@@ -2,7 +2,7 @@
 <html lang="en"> 
 <head> 
     <meta charset="UTF-8" />
-    <title>Making your first Phaser 3 Game - Part 10</title>
+    <title>Trop bien le jeu</title>
     <script src="//cdn.jsdelivr.net/npm/phaser@3.11.0/dist/phaser.js"></script>
     <script type="text/javascript" src="Scene1.js"></script>
     <script type="text/javascript" src="Scene2.js"></script>
@@ -20,7 +20,9 @@
         var yAxis=0;
         var hp = 3;
         var invulnerable = false;
-        
+        var peutTirer = true;
+        var munition = 30;
+        var fireRate = 1000;
         var config = {
         type:Phaser.AUTO,
         width:3200,
