update, le reste

--- a/phaser3-tutorial-src/Main.html
+++ b/phaser3-tutorial-src/Main.html
@@ -19,7 +19,11 @@
         var xAxis=0;
         var yAxis=0;
         var hp = 3;
+        var arme = false;
+        var vitesse = 300;
+        var run = false;
         var invulnerable = false;
+        var cles = false;
         var peutTirer = true;
         var munition = 30;
         var fireRate = 1000;
